CHANGES
*******

0.2 (unreleased)
================

- Nothing changed yet.


0.1 (2013-10-28)
================

- Initial public release.