@@ -6,3 +6,4 @@ from .predicate import (PredicateRegistry, Predicate, KeyIndex,
                         PredicateRegistryError)
 from .compose import ListClassLookup, ChainClassLookup, CachingClassLookup
 from .generic import generic
+from .mapply import mapply
